# cs393r_autonomous_robot_code

./: .cproject  .gitignore  .project  .tags  .tags_sorted_by_file  README.md
basic_msgs/msg/: ColorArray.msg  Int8ArrayStamped.msg  Int8Stamped.msg  UInt32Stamped.msg  UInt64ArrayStamped.msg  UInt64Stamped.msg  UInt8Stamped.msg  ValueRangeArray.msg  ValueRangeArrayStamped.msg
component_tree/: CMakeLists.txt
core/kinematics/: KinematicsModule.cpp
core/localization/: LocalizationModule.cpp  LocalizationModule.h
core/memory/: LocalizationBlock.cpp  LocalizationBlock.h  RobotStateBlock.h
core/motion/: KickModule.cpp  KickModule.h  kack.hpp
core/python/: cfglocalization.py  cfgpose.py  cfgstiff.py  init.py
core/vision/: BeaconDetector.cpp  BeaconDetector.h  Classifier.cpp  ImageProcessor.cpp  ImageProcessor.h  Union_find.cpp  Union_find.h  image_proc_bkp  sample_main.cpp  union_find.h  utils.h
data/austin/: defaultbottom.col  defaulttop.col
data/kicks/: better_kick.yaml  better_lunge.yaml  default.yaml  medium_kick.yaml
kalman_filters/: CMakeLists.txt  manifest.xml
kalman_filters/src/: ekf_test.cpp  (+4 more)
live_params/: manifest.xml
motion_planning/: CMakeLists.txt  kick_trajectory.py  manifest.xml  nao.urdf
particle_filters/: MCL_main.cpp  MCL_particle_filter.hpp  RMCL_particle_filter.hpp  main.cpp
rpp/: contributors.txt
rpp_utils/: manifest.xml
vision_testing/: .gitignore  CMakeLists.txt  manifest.xml
vision_testing/img/: beacon.yuv  decoy.yuv
vision_testing/include/vision_testing/: vision_testing.hpp
vision_testing/src/: vision_testing.cpp
(+72 files in other folders)
